// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Exclusion modal > Rendering > Empty component loads 1`] = `
<div>
  <details
    class="wrapper svelte-fh62sw"
    open=""
  >
    <summary
      class="exclusion-header svelte-fh62sw"
      id="exclusion-header"
    >
      Exclude effects 
    </summary>
     
    <div
      class="exclusions svelte-fh62sw"
    >
      <div
        class="exclusions-controls svelte-fh62sw"
      >
        <button
          class="exclusion-toolbar-button exclusion-control svelte-fh62sw"
          id="add-exclusion-btn"
          title="add"
        >
          + Add Exclusion
        </button>
         
        <button
          class="exclusion-control svelte-fh62sw"
          id="remove-all-exclusions-btn"
          title="clear"
        >
          Clear all
        </button>
      </div>
       
      <div
        class="exclusions-container svelte-fh62sw"
      >
        <div
          class="exclusions-placeholder svelte-fh62sw"
        >
          <p
            class="caption"
          >
            Press the +-button to add an exclusion.
          </p>
        </div>
        <!---->
      </div>
    </div>
  </details>
  
</div>
`;

exports[`Exclusion modal > Rendering > Loads currect exclusion items state 1`] = `
<div>
  <details
    class="wrapper svelte-fh62sw"
    open=""
  >
    <summary
      class="exclusion-header svelte-fh62sw"
      id="exclusion-header"
    >
      Exclude effects (2)
    </summary>
     
    <div
      class="exclusions svelte-fh62sw"
    >
      <div
        class="exclusions-controls svelte-fh62sw"
      >
        <button
          class="exclusion-toolbar-button exclusion-control svelte-fh62sw"
          id="add-exclusion-btn"
          title="add"
        >
          + Add Exclusion
        </button>
         
        <button
          class="exclusion-control svelte-fh62sw"
          id="remove-all-exclusions-btn"
          title="clear"
        >
          Clear all
        </button>
      </div>
       
      <div
        class="exclusions-container svelte-fh62sw"
      >
        <!---->
        <div
          class="exclusion svelte-1q5kcw3"
          data-testid="exclusion"
        >
          <!---->
          <select
            class="svelte-14mby5s"
            data-testid="select-exclusion"
            id="sourceTrack"
          >
            <option
              class="svelte-14mby5s"
              value=""
            >
              Choose an effect
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect A"
            >
              Effect A
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect B"
            >
              Effect B
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect C"
            >
              Effect C
            </option>
            
          </select>
          
          <!---->
           
          <button
            class="svelte-vc9cas"
            data-testid="delete-exclusion"
            name="x"
            title="Delete exclusion"
          >
            x
          </button>
          <!---->
        </div>
        <div
          class="exclusion svelte-1q5kcw3"
          data-testid="exclusion"
        >
          <!---->
          <select
            class="svelte-14mby5s"
            data-testid="select-exclusion"
            id="sourceTrack"
          >
            <option
              class="svelte-14mby5s"
              value=""
            >
              Choose an effect
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect A"
            >
              Effect A
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect B"
            >
              Effect B
            </option>
            <option
              class="svelte-14mby5s"
              value="Effect C"
            >
              Effect C
            </option>
            
          </select>
          
          <!---->
           
          <button
            class="svelte-vc9cas"
            data-testid="delete-exclusion"
            name="x"
            title="Delete exclusion"
          >
            x
          </button>
          <!---->
        </div>
        
        <!---->
      </div>
    </div>
  </details>
  
</div>
`;
